# demo-ghostprovider

./: LICENSE  PKGBUILD  README.md  ghostprovider.sh  install.sh  pyproject.toml  uninstall.sh
demo_ghostprovider/: __init__.py  __main__.py  analyzer.py  hoster.py  installer.py  screens.py  services.py
demo_ghostprovider.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
